# vibecraft

./: .gitignore  Cargo.toml  build.rs  flake.nix
src/: main.rs  mesh.rs  noise.rs
