cargo-features = ["codegen-backend"]

[package]
name = "vibecraft"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
rootcause = "0.11.0"
# TODO: cranelift issue with graviola: https://github.com/ctz/graviola/issues/127
# graviola = { git = "https://github.com/ctz/graviola", version = "0.3.0" }
# rustls-graviola = { git = "https://github.com/ctz/graviola", version = "0.3.2" }
zstd = { version = "0.13.3", default-features = false, features = [
    "zstdmt",
    "arrays",
    "zdict_builder",
    "experimental",
] }

[build-dependencies]
reqwest = { version = "0.13.0-rc.1", default-features = false, features = [
    "blocking",
    "json",
    "rustls-no-provider",
] }
zip = "7.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.23.4", default-features = false, features = ["ring"] }
rootcause = "0.11.0"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
version = "0.18.0-dev"
default-features = false
features = [
    "android-game-activity",
    "android_shared_stdcxx",
    "bevy_render",
    "bevy_ui_render",
    "bevy_asset",
    "bevy_shader",
    "bevy_pbr",
    "bevy_log",
    "bevy_mesh",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "tonemapping_luts",
    "wayland",
    "default_font",
    "zstd_c",
    "bevy_state",
    "bevy_sprite",
    "png",
]

[profile.dev]
codegen-backend = "cranelift"
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.vibecraft]
opt-level = 1
